Change color (editor side)

--- a/src/style.scss
+++ b/src/style.scss
@@ -5,8 +5,45 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-create-block-claro-plugin {
-	background-color: #21759b;
-	color: #fff;
-	padding: 2px;
+
+
+.nacional {
+	background-color: #00B049;
+	color: #FFFFFF;
+	max-width: 45%;
+    margin: 0 auto;
+    padding: 50px;
+}
+
+
+.entretenimiento {
+	background-color: #FFC915;
+	color: #FFFFFF;
+	max-width: 45%;
+    margin: 0 auto;
+    padding: 50px;
+}
+
+.tecnologia {
+	background-color: #00D3F8;
+	color: #FFFFFF;
+	max-width: 45%;
+    margin: 0 auto;
+    padding: 50px;
+}
+
+.mascotas {
+	background-color: #90456D;
+	color: #FFFFFF;
+	max-width: 45%;
+    margin: 0 auto;
+    padding: 50px;
+}
+
+.deportes {
+	background-color: #FF372C;
+	color: #FFFFFF;
+	max-width: 45%;
+    margin: 0 auto;
+    padding: 50px;
 }
