--- a/src/style.scss
+++ b/src/style.scss
@@ -4,46 +4,16 @@
  *
  * Replace them with your own styles or remove the file completely.
  */
-
-
-
-.nacional {
-	background-color: #00B049;
-	color: #FFFFFF;
-	max-width: 45%;
-    margin: 0 auto;
-    padding: 50px;
-}
-
-
-.entretenimiento {
-	background-color: #FFC915;
-	color: #FFFFFF;
-	max-width: 45%;
-    margin: 0 auto;
-    padding: 50px;
-}
-
-.tecnologia {
-	background-color: #00D3F8;
-	color: #FFFFFF;
-	max-width: 45%;
-    margin: 0 auto;
-    padding: 50px;
-}
-
-.mascotas {
-	background-color: #90456D;
-	color: #FFFFFF;
-	max-width: 45%;
-    margin: 0 auto;
-    padding: 50px;
-}
-
-.deportes {
-	background-color: #FF372C;
-	color: #FFFFFF;
-	max-width: 45%;
-    margin: 0 auto;
-    padding: 50px;
-}
+ $categories: 'nacional', 'entretenimiento', 'tecnologia', 'mascotas', 'deportes';
+ $backgrounds: #00B049, #FFC915, #00D3F8, #90456D, #FF372C;
+ 
+ @each $category in $categories {
+   $index: index($categories, $category);
+   .#{$category} {
+	 max-width: 45%;
+	 margin: 0 auto;
+	 padding: 50px;
+	 color: #FFFFFF;
+	 background-color: nth($backgrounds, $index);
+   }
+ }
