--- a/src/style.scss
+++ b/src/style.scss
@@ -10,10 +10,29 @@
  @each $category in $categories {
    $index: index($categories, $category);
    .#{$category} {
+	 font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;	
 	 max-width: 45%;
 	 margin: 0 auto;
 	 padding: 50px;
 	 color: #FFFFFF;
 	 background-color: nth($backgrounds, $index);
+	 border: 3px solid #FFFFFF;
+	 border-radius: 15px;
+	 overflow: hidden;
+	 box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.1);
    }
+   // Transition effect
+   .#{$category}:hover {
+	 box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.29);
+	 transition: box-shadow 0.5s ease-in-out;
+   }
+   .instructions {
+    font-size: 14px;
+    font-style: italic;
+    background-color: #FFFFFF;
+    padding: 15px;
+	span {
+		color: #464646;
+		}	
+  	}
  }
